--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.androiddevs.mvvmnewsapp">
 
+    // 8366fc3ce12040338505bd85c80a6c2f API
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewsActivity">
+        <activity android:name=".ui.NewsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
